<resources>
    <string name="app_name">one-Q-shop</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">MainActivity</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
</resources>