<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:title="@string/title_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_000000_24" />

    <item
        android:id="@+id/search"
        android:title="@string/title_search"
        android:icon="@drawable/ic_baseline_search_000000_24" />

    <item
        android:id="@+id/scan"
        android:title="@string/title_scan"
        android:icon="@drawable/ic_baseline_photo_camera_000000_24" />

    <item
        android:id="@+id/cart"
        android:title="@string/title_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_000000_24" />

    <item
        android:id="@+id/profile"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_baseline_account_circle_000000_24" />
</menu>